<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/current_form"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="" />

    <EditText
        android:id="@+id/editTextTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_service_title"
         />

    <EditText
        android:id="@+id/editTextForm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_hint"
        android:minHeight="48dp" />
    <EditText
        android:id="@+id/editTextHourlyRate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hourly_rate_hint"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/buttonDeleteService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

    </LinearLayout>


</LinearLayout>