<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="EditServiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:hint="@string/enter_new_service_title"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/prompt_form"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

        <EditText
            android:id="@+id/editTextHourlyRate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_below="@id/editTextTitle"
            android:layout_marginTop="8dp"
            android:hint="@string/hourly_rate_hint"
            android:inputType="numberDecimal"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextForm" />

        <TextView
            android:id="@+id/textViewFormDescription"
            android:layout_width="411dp"
            android:layout_height="55dp"
            android:layout_marginTop="4dp"
            android:text="@string/form_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextHourlyRate" />

        <Button
            android:id="@+id/btn_remove_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="removeService"
            android:text="Remove Service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_service" />

        <Button
            android:id="@+id/btn_add_service"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:onClick="addService"
            android:text="@string/add_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFormDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40" />

</LinearLayout>